# amplifier-ipc

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json  test_behavior_files.py  test_behavior_files_task3.py
amplifier-ipc-cli/: .gitignore  pyproject.toml
amplifier-ipc-cli/src/amplifier_ipc_cli/: __main__.py  approval_provider.py  definitions.py  main.py  paths.py  registry.py  repl.py  session_launcher.py  session_spawner.py  streaming.py
amplifier-ipc-cli/src/amplifier_ipc_cli/commands/: __init__.py  allowed_dirs.py  denied_dirs.py  discover.py  install.py  notify.py  provider.py  register.py  reset.py  routing.py  run.py  session.py  uninstall.py  unregister.py  update.py  version.py
amplifier-ipc-cli/src/amplifier_ipc_cli/ui/: __init__.py  error_display.py  message_renderer.py
amplifier-ipc-cli/tests/: conftest.py  test_copy_imports.py  test_definitions.py  test_import.py  test_integration.py  test_management_integration.py  test_re_exports.py  test_registry.py  test_repl.py  test_session_launcher.py  test_session_spawner.py  test_streaming.py
amplifier-ipc-cli/tests/test_commands/: test_discover.py  test_install.py  test_register.py  test_run.py  test_session.py  test_uninstall.py  test_unregister.py  test_update.py  test_wiring.py
amplifier-ipc-protocol/: pyproject.toml
amplifier-ipc-protocol/src/amplifier_ipc_protocol/: __init__.py  content.py  events.py  framing.py  models.py  protocols.py  server.py
amplifier-ipc-protocol/tests/: test_client.py  test_decorators.py  test_errors.py  test_events.py  test_framing.py  test_protocols.py  test_server_client_injection.py
services/amplifier-amplifier/: pyproject.toml
services/amplifier-amplifier/behaviors/: amplifier-dev.yaml  amplifier-expert.yaml
services/amplifier-amplifier/src/amplifier_amplifier/: __init__.py  __main__.py
services/amplifier-amplifier/tests/: test_content.py  test_describe.py  test_scaffolding.py
services/amplifier-browser-tester/: pyproject.toml
services/amplifier-browser-tester/behaviors/: browser-tester.yaml
services/amplifier-browser-tester/src/amplifier_browser_tester/: __init__.py  __main__.py
services/amplifier-browser-tester/tests/: test_content.py  test_describe.py  test_scaffolding.py
services/amplifier-core/: pyproject.toml
services/amplifier-core/behaviors/: core-expert.yaml
services/amplifier-core/src/amplifier_core/: __init__.py  __main__.py
services/amplifier-core/tests/: test_content.py  test_describe.py  test_scaffolding.py
services/amplifier-design-intelligence/: pyproject.toml
services/amplifier-design-intelligence/agents/: design-system-architect.md  layout-architect.md
services/amplifier-design-intelligence/behaviors/: design-intelligence.yaml
services/amplifier-design-intelligence/src/amplifier_design_intelligence/: __init__.py  __main__.py
services/amplifier-design-intelligence/tests/: test_content.py  test_describe.py  test_scaffolding.py
services/amplifier-filesystem/: pyproject.toml
services/amplifier-filesystem/behaviors/: apply-patch.yaml
services/amplifier-filesystem/src/amplifier_filesystem/: __init__.py  __main__.py
services/amplifier-filesystem/tests/: test_content.py  test_describe.py  test_scaffolding.py
services/amplifier-foundation/: pyproject.toml
services/amplifier-foundation/agents/: amplifier-dev.yaml  default.yaml  explorer.md  minimal.yaml  shell-exec.md  with-anthropic.yaml  with-openai.yaml
services/amplifier-foundation/behaviors/: agents.yaml  amplifier-dev.yaml  foundation-expert.yaml  foundation-ipc.yaml  logging.yaml  progress-monitor.yaml  redaction.yaml  sessions.yaml  shadow-amplifier.yaml  status-context.yaml  streaming-ui.yaml  tasks.yaml  test_foundation_behaviors.py  todo-reminder.yaml
services/amplifier-foundation/src/amplifier_foundation/: __init__.py  __main__.py
services/amplifier-foundation/tests/: conftest.py  test_approval_events.py  test_artifact_events.py  test_component_counts.py  test_content.py  test_context_manager.py  test_delegate.py  test_describe.py  test_hooks_remaining.py  test_hooks_simple.py  test_integration.py  test_orchestrator.py  test_phase2_imports.py  test_scaffolding.py  test_task.py  test_tools_simple.py  test_tools_stubs.py  test_tools_subdir.py  test_tools_todo.py
services/amplifier-modes/: pyproject.toml
services/amplifier-modes/behaviors/: modes-ipc.yaml  modes.yaml
services/amplifier-modes/src/amplifier_modes/: __init__.py  __main__.py
services/amplifier-modes/tests/: test_content.py  test_describe.py  test_mode_operations.py  test_policy_events.py  test_scaffolding.py
services/amplifier-providers/: README.md  pyproject.toml
services/amplifier-providers/behaviors/: providers-ipc.yaml  providers.yaml
services/amplifier-providers/src/amplifier_providers/: __init__.py  __main__.py
services/amplifier-providers/tests/: test_anthropic_integration.py  test_anthropic_provider.py  test_azure_openai_provider.py  test_describe.py  test_gemini_provider.py  test_github_copilot_provider.py  test_mock_provider.py  test_ollama_provider.py  test_openai_provider.py  test_scaffolding.py  test_vllm_provider.py
services/amplifier-routing-matrix/: pyproject.toml
services/amplifier-routing-matrix/behaviors/: routing-ipc.yaml  routing.yaml
services/amplifier-routing-matrix/tests/: test_content.py  test_describe.py  test_scaffolding.py
services/amplifier-skills/: .gitignore  pyproject.toml
services/amplifier-skills/behaviors/: skills-ipc.yaml  skills-tool.yaml  skills.yaml
services/amplifier-skills/tests/: test_content.py  test_describe.py  test_scaffolding.py
services/amplifier-superpowers/: pyproject.toml
services/amplifier-superpowers/agents/: spec-reviewer.md
services/amplifier-superpowers/behaviors/: superpowers-methodology.yaml
services/amplifier-superpowers/tests/: test_content.py  test_describe.py  test_scaffolding.py
services/amplifier-system-design-intelligence/: .gitignore  pyproject.toml
services/amplifier-system-design-intelligence/behaviors/: system-design.yaml
(+429 files in other folders)
