[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "amplifier-ipc-host"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "amplifier-ipc-protocol",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
amplifier-ipc-host = "amplifier_ipc_host.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/amplifier_ipc_host"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.pyright]
pythonVersion = "3.11"
extraPaths = ["src"]

[tool.uv.sources]
amplifier-ipc-protocol = { path = "../amplifier-ipc-protocol" }
