[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "amplifier-ipc-cli"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "amplifier-ipc-host",
    "click>=8.1.0",
    "rich>=13.0.0",
    "prompt-toolkit>=3.0.52",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pyright>=1.1",
    "ruff>=0.1",
]

[project.scripts]
amplifier-ipc = "amplifier_ipc_cli.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/amplifier_ipc_cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.pyright]
pythonVersion = "3.11"
extraPaths = ["src"]

[tool.uv.sources]
amplifier-ipc-host = { path = "../amplifier-ipc-host" }
