[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "amplifier-browser-tester"
version = "0.1.0"
description = "amplifier-browser-tester IPC service"
requires-python = ">=3.11"
dependencies = [
    "amplifier-ipc-protocol",
]

[project.scripts]
amplifier-browser-tester-serve = "amplifier_browser_tester.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/amplifier_browser_tester"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.pyright]
pythonVersion = "3.11"
extraPaths = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.uv.sources]
amplifier-ipc-protocol = { path = "../../amplifier-ipc-protocol" }
