[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "amplifier-design-intelligence"
version = "0.1.0"
description = "amplifier-design-intelligence IPC service"
requires-python = ">=3.11"
dependencies = [
    "amplifier-ipc-protocol",
]

[project.scripts]
amplifier-design-intelligence-serve = "amplifier_design_intelligence.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/amplifier_design_intelligence"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.pyright]
pythonVersion = "3.11"
extraPaths = ["src"]

[tool.uv.sources]
amplifier-ipc-protocol = { path = "../../amplifier-ipc-protocol" }
