[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "amplifier-filesystem"
version = "0.1.0"
description = "amplifier-filesystem IPC service"
requires-python = ">=3.11"
dependencies = [
    "amplifier-ipc-protocol",
]

[project.scripts]
amplifier-filesystem-serve = "amplifier_filesystem.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/amplifier_filesystem"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.pyright]
pythonVersion = "3.11"
extraPaths = ["src"]

[tool.uv.sources]
amplifier-ipc-protocol = { path = "../../amplifier-ipc-protocol" }
