[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "amplifier-foundation"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "amplifier-ipc-protocol",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "aiohttp>=3.9",
    "beautifulsoup4>=4.12",
    "duckduckgo-search>=6.0",
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
amplifier-foundation-serve = "amplifier_foundation.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/amplifier_foundation"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.pyright]
pythonVersion = "3.11"
extraPaths = ["src"]

[tool.uv.sources]
amplifier-ipc-protocol = { path = "../../amplifier-ipc-protocol" }
