[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "amplifier-routing-matrix"
version = "0.1.0"
description = "Amplifier Routing Matrix IPC service — model routing via curated matrices"
requires-python = ">=3.11"
dependencies = [
    "amplifier-ipc-protocol",
    "pyyaml>=6.0",
]

[project.scripts]
amplifier-routing-matrix-serve = "amplifier_routing_matrix.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/amplifier_routing_matrix"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.pyright]
pythonVersion = "3.11"
extraPaths = ["src"]

[tool.uv.sources]
amplifier-ipc-protocol = { path = "../../amplifier-ipc-protocol" }
