[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "amplifier-superpowers"
version = "0.1.0"
description = "amplifier-superpowers IPC service"
requires-python = ">=3.11"
dependencies = [
    "amplifier-ipc-protocol",
]

[project.scripts]
amplifier-superpowers-serve = "amplifier_superpowers.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/amplifier_superpowers"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.pyright]
pythonVersion = "3.11"
extraPaths = ["src"]

[tool.uv.sources]
amplifier-ipc-protocol = { path = "../../amplifier-ipc-protocol" }
