[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "amplifier-system-design-intelligence"
version = "0.1.0"
description = "amplifier-system-design-intelligence IPC service"
requires-python = ">=3.11"
dependencies = [
    "amplifier-ipc",
]

[project.scripts]
amplifier-system-design-intelligence-serve = "amplifier_system_design_intelligence.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/amplifier_system_design_intelligence"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.pyright]
pythonVersion = "3.11"
extraPaths = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.uv.sources]
amplifier-ipc = { path = "../../." }
